--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -23,6 +23,7 @@
     --primary-color: #99c8c5;
     --secundary-color: white;
     --terniary-color: #9f9eb1;
+    --hover-color: #448282;
 }
 
 
@@ -60,7 +61,7 @@ body {
     }
 }
 
-.titulo-extern{
+.titulo-extern {
     grid-column: 1/-1;
     margin-bottom: 2rem;
 }
@@ -109,8 +110,8 @@ body {
     color: var(--secundary-color);
 }
 
-@media only screen and (max-width: 768px){
-    .contenedor-perfil{
+@media only screen and (max-width: 768px) {
+    .contenedor-perfil {
         flex-direction: column;
     }
 }
@@ -118,41 +119,43 @@ body {
 
 /* Reutilizables*/
 
-.texto{
+.texto {
     margin-top: 1rem;
     font-size: 2rem;
-    color:var(--terniary-color);
+    color: var(--terniary-color);
     font-family: "sao-regular";
     font-weight: 100;
 }
 
 .item-pre-titulo {
-	font-size: 1.6rem;
-	color: var(--terniary-color);
-	font-weight: 300;
+    font-size: 1.6rem;
+    color: var(--terniary-color);
+    font-weight: 300;
 }
+
 .item-titulo {
-	font-size: 2rem;
-	color: var(--secundary-color);
-	font-weight: 500;
-	margin: 0.8rem 0;
+    font-size: 2rem;
+    color: var(--secundary-color);
+    font-weight: 500;
+    margin: 0.8rem 0;
 }
+
 .item-sub-titulo {
-	font-size: 1.6rem;
-	color: var(--terniary-color);
-	font-weight: 400;
+    font-size: 1.6rem;
+    color: var(--terniary-color);
+    font-weight: 400;
 }
 
 
-.titulo{
- color: var(--primary-color);
- font-size: 3rem;
+.titulo {
+    color: var(--primary-color);
+    font-size: 3rem;
 }
 
 
 /*subpartes */
 
-.lista-tecno{
+.lista-tecno {
     margin-top: 1rem;
     margin-left: 2rem;
     line-height: 2;
@@ -162,29 +165,29 @@ body {
 
 /* educación */
 
-.educacion{
+.educacion {
     margin-top: 2rem;
 }
 
-.certificacion{
+.certificacion {
     margin-top: 2rem;
 }
 
 .educacion-item {
-	margin-top: 2rem;
+    margin-top: 2rem;
 }
 
 /* Experiencia */
 .item-experiencia {
-	margin-top: 2rem;
-}
-
-/* proyectos */
-.proyectos{
     margin-top: 2rem;
 }
 
-.item-proyecto{
+/* proyectos */
+.proyectos {
+    margin-top: 2rem;
+}
+
+.item-proyecto {
     margin-top: 2rem;
 }
 
@@ -206,11 +209,81 @@ body {
 }
 
 hr {
-	grid-column: 1/-1;
-	width: 45%;
-	margin: 0 auto;
-	margin-top: 5rem;
-	margin-bottom: 1rem;
-	border: none;
-	border-top: 2px solid var(--terniary-color);
+    grid-column: 1/-1;
+    width: 45%;
+    margin: 0 auto;
+    margin-top: 5rem;
+    margin-bottom: 1rem;
+    border: none;
+    border-top: 2px solid var(--terniary-color);
+}
+
+label {
+    color: var(--primary-color);
+    font-size: 2rem;
+}
+
+input {
+    width: 70%;
+    margin-top: 20px;
+    margin-left: 20px;
+
+}
+
+
+textarea {
+    width: 100%;
+    height: 20rem;
+    margin-top: 2rem;
+
+}
+
+.contacto{
+    margin-top: 20px;
+}
+.item-contacto{
+
+}
+
+.mensaje{
+    margin-top: 20px !important;
+}
+.boton-enviar{
+    display: inline-block;
+    padding: 10px 20px; /* Adjust padding to control button size */
+    background-color:var(--primary-color); /* Button background color */
+    color: var(--secundary-color); /* Button text color */
+    border: none; /* Remove default button border */
+    border-radius: 4px; /* Rounded corners for the button */
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.center-vertically {
+    display: flex;
+    justify-content: center; /* Horizontal alignment */
+    align-items: center; /* Vertical alignment */
+    margin-bottom: 3rem;
+}
+
+.boton-enviar:hover {
+    background-color:var(--hover-color); /* Color change on hover */
+}
+
+
+.horizontal{
+    display: inline; /* Display list items inline */
+    margin-right: 20px; /* Add space between list items */
+   
+}
+
+a{
+    color:var(--terniary-color);
+}
+
+a:hover{
+    color: var(--hover-color);
 }
