--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -59,6 +59,12 @@ body {
         padding: 3rem;
         gap: 7rem;
     }
+    
+    .portafolio-seccion {
+        display:none;
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 .titulo-extern {
@@ -273,7 +279,7 @@ textarea {
     font-size: 3rem;
     color: var(--secundary-color);
     font-weight: 500;
-    
+
 }
 
 .boton-enviar:hover {
@@ -305,11 +311,11 @@ a:hover {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-bottom: 2rem;   
+    margin-bottom: 2rem;
 }
 
-.redes-seccion{
-    display:flex;
+.redes-seccion {
+    display: flex;
     flex-direction: column;
     flex-grow: 1;
 }
@@ -329,26 +335,27 @@ a:hover {
     padding: 1.5rem;
 }
 
-a{
-    color:var(--primary-color);
+a {
+    color: var(--primary-color);
 }
 
 .fa-linkedin:hover {
     color: var(--hover-color);
-    cursor: pointer; 
+    cursor: pointer;
 }
 
 .fa-github:hover {
-    color: var(--hover-color); 
-    cursor: pointer; 
-}
-.link{
-    text-align: center;
-    font-size: 2rem;
-    color:var(--terniary-color)
+    color: var(--hover-color);
+    cursor: pointer;
 }
 
-footer{
+.link {
+    text-align: center;
+    font-size: 2rem;
+    color: var(--terniary-color)
+}
+
+footer {
     margin-top: 2rem;
     display: flex;
     justify-content: center;
@@ -359,23 +366,54 @@ footer{
 
 /*  Sección Portafolio */
 
-.portafolio-seccion{
+.portafolio-seccion {
+    margin-left: 35rem;
+    margin-right: 35rem;
+    margin-top: 3.5rem;
     grid-column: 1/-1;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
-.portafolio-item{
-    width: 400px;
-    height: 250px;
+.portafolio-item {
+    width: 308px;
+    height: 229px;
     overflow: hidden;
-    margin: 2px;
+    margin: 2rem;
     position: relative;
+    
+    
 }
 
-.portafolio-imagen{
+.portafolio-imagen {
     width: 100%;
     height: 100%;
+
+}
+
+
+.cover {
+    background-color: rgba(2, 8, 26, 0.7);
+    visibility: hidden;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column ;
+    
+}
+
+.portafolio-item:hover .cover,
+.portafolio-imagen:hover,
+.portafolio-link .icono-link .icono-link .cover {
+    visibility: visible;
+    position: absolute;
 }
